Bug 161365 - Checkbox state is not saved in xlsx (saved in ods though)
Summary: Checkbox state is not saved in xlsx (saved in ods though)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.6.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords: filter:xlsx
Depends on:
Blocks: XLSX-Form-Controls
  Show dependency treegraph
 
Reported: 2024-05-31 15:32 UTC by Tamo
Modified: 2025-05-28 13:47 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
xlsx with checkbox (7.61 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-05-31 15:33 UTC, Tamo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamo 2024-05-31 15:32:27 UTC
Description:
Checked checkboxes (not linked to any cell) in xlsx are not checked when reopened.

Steps to Reproduce:
1. Create a new sheet.
2. Create a checkbox.
3. Click the checkbox. (or change its default status)
4. Save as XLSX. (and ODS too)
5. Open it again.

Actual Results:
All checkboxes are unchecked in XLSX.

Expected Results:
Status should be saved in XLSX too.


Reproducible: Always


User Profile Reset: No

Additional Info:
maybe related to https://bugs.documentfoundation.org/show_bug.cgi?id=142209


Locale: ja
Module: SpreadsheetDocument
OS: Windows 10
OS is 64bit: yes
Comment 1 Tamo 2024-05-31 15:33:35 UTC
Created attachment 194490 [details]
xlsx with checkbox
Comment 2 m_a_riosv 2024-06-01 00:20:12 UTC
Reproducible
Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6084962f93efc005b6827edceae12d3170f17ccd
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 ady 2024-06-01 03:02:24 UTC
FWIW, it works correctly for the older XLS format.

The same behavior as described in comment 0 is seen in LO 7.6, but in LO 7.5 and older the complete checkbox itself disappears when saving as XLSX.
Comment 4 BogdanB 2024-06-04 20:32:19 UTC
Also in
Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: ro-RO
Ubuntu package version: 4:24.2.3-0ubuntu0.24.04.2
Calc: threaded
Comment 5 ady 2024-06-04 22:01:28 UTC
I am not sure that we need a bibisect for this. Until LO 7.5 this was even worse; in 7.6 there was some partial improvement; XLS is OK (XLSX, KO). See comment 3.

If someone thinks that bibisectRequest is relevant, please add it.
Comment 6 Jazevedo 2025-05-06 15:57:22 UTC
This issue is also reproducible in 5.4.0.0.alpha1
Comment 7 Jazevedo 2025-05-06 19:23:05 UTC
This issue is also reproducible (and even worse) in: 

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 8 Szymon Kłos 2025-05-23 11:36:49 UTC
I have patch for this: https://gerrit.libreoffice.org/c/core/+/185714
Comment 9 Commit Notification 2025-05-26 05:05:57 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02fd0163f55e81f2c0c08c128f055e008ffcfc36

tdf#161365 xlsx export: checkbox requires valid anchor to be shown

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-05-27 06:18:54 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/de5bd835b81735f5627586bd1efb677d99921eba

tdf#161365 xlsx export: checkbox checked property in vmlDrawing.xml

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-05-27 07:28:04 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/12bfb233dc82844712962f4dabd5d89fc3e9e0fa

tdf#161365 xlsx export: checkbox requires valid anchor to be shown

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Szymon Kłos 2025-05-27 07:42:14 UTC
I think it should be fixed now
Comment 13 BogdanB 2025-05-27 16:22:06 UTC
Szymon, can you see also this bug https://bugs.documentfoundation.org/show_bug.cgi?id=166724. seems similar.
Comment 14 BogdanB 2025-05-27 16:25:12 UTC
About this bug, it was not workign in (for comparison reason)
Version: 25.2.3.1 (X86_64) / LibreOffice Community
Build ID: d8d1af5f77df955194e52baabe19324532ac8e8b
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded


Works well in 
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0b62b122cfed6b864f9dd613bd238474ad99dafe
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 15 Commit Notification 2025-05-27 22:50:26 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a55b8c5c0a4dfabcaa00360d02c33ea077f2062a

tdf#161365 xlsx export: checkbox checked property in vmlDrawing.xml

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Jazevedo 2025-05-28 13:47:32 UTC
Tested the fix with the original sample fix on: 

Version: 25.2.5.0.0+ (X86_64) / LibreOffice Community
Build ID: 0f844301675f033c68055d748c1e6a499b36d0f7
CPU threads: 20; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

And it works.

Thanks for the fix.