tdf#161365 xlsx export: checkbox requires valid anchor to be shown

- checkboxes exported XLSX -> XLSX become invisible in both LO and MSO
- the file inspection shows we used 0 as a value for all the anchor
  properties (from and to) in both sheet1.xml and drawing1.xml
- we used maAreaFrom/To which are calculated if XBindableValue
  and SC_SERVICENAME_VALBIND are supported in the control model
  in the XclExpTbxControlObj
- we can fetch these values directly when saving checkbox form XShape
- it can be noticed we lack other properties too - for background color,
  to do later as this already makes it usable

Change-Id: Icb833b6943df7d73aad7414f8a115351ea4c7d05
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185711
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>