sc/source/filter/inc/xeescher.hxx
@@ -276,6 +276,8 @@ private:
     void                WriteCellLinkSubRec( XclExpStream& rStrm, sal_uInt16 nSubRecId );
     /** Writes the ftSbs sub structure containing scrollbar data. */
     void                WriteSbs( XclExpStream& rStrm );
+    /** Writes an anchor, if empty calculates one form XShape */
+    void                WriteAnchor( sax_fastparser::FSHelperPtr& rTarget, bool bIsDrawing ) const;
 
 private:
     const css::uno::Reference< css::drawing::XShape > mxShape;
